--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "railsware/mailtrap-php": "^2.0",
+        "stripe/stripe-php": "^15.6",
         "symfony/css-selector": "^7.1",
         "symfony/dom-crawler": "^7.1"
     },
